--- a/index.html
+++ b/index.html
@@ -104,9 +104,10 @@
 </head>
 <body>
   <audio id="backgroundMusic" autoplay loop muted>
-    <source src="happy-birthday-254480.mp3" type="audio/mpeg">
+    <source src="./happy-birthday-254480.mp3" type="audio/mpeg">
     你的浏览器不支持音频播放。
   </audio>
+
 
  <header>
   <div class="header-title">
